src/test/ui/object-safety/object-safety-generics.object_safe_for_dispatch.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/object-safety-generics.rs:20:5
   |
LL | trait Bar {
   |       --- this trait cannot be made into an object...
LL |     fn bar<T>(&self, t: T);
   |        --- ...because method `bar` has generic type parameters
...
LL |     t
   |     ^ the trait `Bar` cannot be made into an object
   |
   = help: consider moving `bar` to another trait
   = note: required because of the requirements on the impl of `CoerceUnsized<&dyn Bar>` for `&T`
   = note: required by cast to type `&dyn Bar`

error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/object-safety-generics.rs:26:5
   |
LL | trait Bar {
   |       --- this trait cannot be made into an object...
LL |     fn bar<T>(&self, t: T);
   |        --- ...because method `bar` has generic type parameters
...
LL |     t as &dyn Bar
   |     ^ the trait `Bar` cannot be made into an object
   |
   = help: consider moving `bar` to another trait
   = note: required because of the requirements on the impl of `CoerceUnsized<&dyn Bar>` for `&T`
   = note: required by cast to type `&dyn Bar`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0038`.
